/* 
  Localizable.strings
  ShoppingCart

  Created by Fauad Anwar on 11/11/21.
  
*/
//"Title Text for Price Label"
"Price_Title" = "Price:";
//"Title Text for List View NavigationBar"
"List_View_Title" = "Items";
//"Title Text for Created at"
"Created_At_Title" = "Created at:";
