...
                                        <rect key="frame" x="344" y="0.0" width="40" height="40"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="Kaq-FH-CHO"/>
                                            <constraint firstAttribute="width" constant="40" id="fcB-uD-osJ"/>
                                        </constraints>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" image="arrow.forward" catalog="system"/>
                                        <connections>
                                            <action selector="buttonNextImageClicked:" destination="TCU-Fl-DVY" eventType="touchUpInside" id="BsL-Qa-UFV"/>
                                        </connections>
                                    </button>
                                    <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="ys8-zo-6g5">
                                        <rect key="frame" x="134" y="10" width="116" height="20"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="WnO-Vc-u8j"/>
                                            <constraint firstAttribute="width" constant="40" id="zuY-Sx-8yt"/>
                                        </constraints>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" image="arrow.backward" catalog="system"/>
                                        <connections>
                                            <action selector="buttonPriviousImageClicked:" destination="TCU-Fl-DVY" eventType="touchUpInside" id="A0N-T3-tk2"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
