...
    private var listItems = [SCItem]()
    
    override func viewDidLoad() {
        super.viewDidLoad()
        self.clearsSelectionOnViewWillAppear = false
        self.title = NSLocalizedString("List_View_Title", comment: "Title Text for List View NavigationBar")
        self.tableView.accessibilityIdentifier = "ItemTableViewController"
        generateItems()
    }
     
    func setupDataSource() -> DataSource
    {
        let dataSource = DataSource(tableView: tableView) { tableView, indexPath, item in
...
